[package]
name = "listenbrainz_rs"
version = "0.1.0"
authors = ["RustyNova"]
edition = "2024"
license = "MIT"
repository = "https://github.com/RustyNova016/listenbrainz_rs.git"
homepage = "https://github.com/RustyNova016/listenbrainz_rs"
readme = "README.md"
description = "ListenBrainz API bindings for Rust"
keywords = ["listenbrainz", "api", "bindings"]
categories = ["api-bindings"]
publish = true
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api_bindium = {version = "0.1.0", git = "https://github.com/RustyNova016/api_bindium", rev = "d7e9738b55c8d0a11644663b1c1088447ce16122"}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

governor = { version = "0.10.0", optional = true }  
snafu = {version = "0.8.9", features = ["rust_1_81"]}

# async
blocking = "1.6.2"
async-io = "2.6.0"
streamies = {version = "0.3.0", default-features = false, features = ["smol"]}
futures-lite = "2.6.1"
async-lock = "3.4.1"
async-executor = "1.13.3"

# Debuging
tracing = {version = "0.1.41", optional = true}
hotpath = { version = "0.7.3", optional = true }

# Others
bon = "3.8.1"
mutants = "0.0.3"
chrono = "0.4.42"
ureq = "3.1.4"

[dev-dependencies]
smol-macros = "0.1.1"
macro_rules_attribute = "0.2.2"

[features]
default = ["async"]

# Async
sync = ["api_bindium/sync"]
async = ["api_bindium/async"]

# Fetching
native_tls = ["api_bindium/native_tls"]
rate_limit = ["api_bindium/rate_limit"]

# Debugging
backtrace = ["api_bindium/backtrace"]
tracing = ["dep:tracing"]
hotpath = ["dep:hotpath", "hotpath/hotpath", "api_bindium/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc", "api_bindium/hotpath-alloc"]
hotpath-off = ["hotpath/hotpath-off", "api_bindium/hotpath-off"]
