[package]
name = "listenbrainz_rs"
version = "0.1.0"
authors = ["RustyNova"]
edition = "2024"
license = "MIT"
repository = "https://github.com/RustyNova016/listenbrainz_rs.git"
homepage = "https://github.com/RustyNova016/listenbrainz_rs"
readme = "README.md"
description = "ListenBrainz API bindings for Rust"
keywords = ["listenbrainz", "api", "bindings"]
categories = ["api-bindings"]
publish = true
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api_bindium = {version = "0.1.0", git = "https://github.com/RustyNova016/api_bindium", rev = "d7e9738b55c8d0a11644663b1c1088447ce16122"}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
snafu = {version = "0.8.9", features = ["rust_1_81"]}

# Debuging
hotpath = { version = "0.7.3", optional = true }
tracing = {version = "0.1.41", optional = true}
tracing-indicatif = {version = "0.3.14", optional = true}

# Others
bon = "3.8.1"
chrono = "0.4.42"
ureq = "3.1.4"
async-executor = { version = "1.13.3", optional = true }

[dev-dependencies]
smol-macros = "0.1.1"
macro_rules_attribute = "0.2.2"

[features]
default = []

# Async
sync = ["api_bindium/sync"]
async = ["api_bindium/async", "dep:async-executor"]

# Fetching
native_tls = ["api_bindium/native_tls"]
rate_limit = ["api_bindium/rate_limit"]

# Debugging
backtrace = ["api_bindium/backtrace"]
tracing = ["api_bindium/tracing", "dep:tracing"]
hotpath = ["dep:hotpath", "hotpath/hotpath", "api_bindium/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc", "api_bindium/hotpath-alloc"]
hotpath-off = ["hotpath/hotpath-off", "api_bindium/hotpath-off"]
