[package]
name = "listenbrainz_rs"
version = "0.1.0"
authors = ["RustyNova"]
edition = "2024"
license = "MIT"
repository = "https://github.com/RustyNova016/listenbrainz_rs.git"
homepage = "https://github.com/RustyNova016/listenbrainz_rs"
readme = "README.md"
description = "ListenBrainz API bindings for Rust"
keywords = ["listenbrainz", "api", "bindings"]
categories = ["api-bindings"]
publish = true
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api_bindium = {version = "0.4.0"}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
snafu = {version = "0.9.0", features = ["rust_1_81"]}

# Debuging
hotpath = { version = "0.15.0", optional = true }
tracing = {version = "0.1.41", optional = true}
tracing-indicatif = {version = "0.3.14", optional = true}

# Others
bon = "3.8.1"
chrono = "0.4.42"
async-executor = { version = "1.13.3", optional = true }

[dev-dependencies]
smol-macros = "0.1.1"
macro_rules_attribute = "0.2.2"

[features]
default = []

# Async
sync = ["api_bindium/sync"]
async = ["api_bindium/async", "dep:async-executor"]

# Fetching
native_tls = ["api_bindium/native_tls"]
rate_limit = ["api_bindium/rate_limit"]

# Debugging
backtrace = ["api_bindium/backtrace"]
tracing = ["api_bindium/tracing", "dep:tracing", "dep:tracing-indicatif"]
hotpath = ["dep:hotpath", "hotpath/hotpath", "api_bindium/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc", "api_bindium/hotpath-alloc"]

[package.metadata.cargo-machete]
ignored = ["hotpath"]

[lints.clippy]
alloc_instead_of_core = "deny"
std_instead_of_core = "deny"
allow_attributes = "warn"
allow_attributes_without_reason = "deny"
cast_lossless = "deny"
cloned_instead_of_copied = "deny"
collapsible_else_if = "warn"
too_many_lines = "warn"
comparison_chain = "warn"
match_same_arms = "warn"
needless_collect = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
needless_raw_string_hashes = "warn"
needless_type_cast = "warn"
non_std_lazy_statics = "warn"
option_as_ref_cloned = "warn"
or_fun_call = "warn"
or_then_unwrap = "warn"
range_plus_one = "warn"
range_minus_one = "warn"
rc_mutex = "warn"
redundant_clone = "warn"
redundant_else = "warn"
ref_option = "deny"
renamed_function_params = "warn"
return_and_then = "warn"
return_self_not_must_use = "warn"
same_name_method = "deny"
search_is_some = "warn"
inefficient_to_string = "warn"
inherent_to_string = "warn"
uninlined_format_args = "warn"
similar_names = "warn"
try_err = "warn"
type_complexity = "warn"
type_repetition_in_bounds = "warn"
unnecessary_box_returns = "warn"
unnecessary_literal_bound = "warn"
unnecessary_wraps = "warn"
unneeded_field_pattern = "warn"
unnested_or_patterns = "warn"
unreadable_literal = "warn"
unseparated_literal_suffix = "warn"
unused_async = "warn"
unused_peekable = "warn"
unused_result_ok = "warn"
unused_self = "warn"
unused_trait_names = "warn"
useless_let_if_seq = "warn"
wildcard_enum_match_arm  = "warn"